--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,12 @@
 <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="post">
+        <form
+            action="/campgrounds"
+            method="post"
+            class="validate-form"
+            novalidate
+        >
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input
@@ -10,7 +15,9 @@
                     type="text"
                     name="campground[title]"
                     id="title"
+                    required
                 />
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
@@ -19,7 +26,9 @@
                     type="text"
                     name="campground[location]"
                     id="location"
+                    required
                 />
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
@@ -28,7 +37,9 @@
                     type="text"
                     name="campground[image]"
                     id="image"
+                    required
                 />
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
@@ -42,7 +53,9 @@
                         aria-describedby="price-label"
                         id="price"
                         name="campground[price]"
+                        required
                     />
+                    <div class="valid-feedback">Looks good!</div>
                 </div>
             </div>
             <div class="mb-3">
@@ -52,7 +65,9 @@
                     type="text"
                     name="campground[description]"
                     id="description"
+                    required
                 ></textarea>
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <button class="btn btn-success">Add Campground</button>
@@ -61,3 +76,5 @@
         <a href="/campgrounds">All Campgrounds</a>
     </div>
 </div>
+
+
