--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -8,6 +8,7 @@
             method="post"
             class="validate-form"
             novalidate
+            enctype="multipart/form-data"
         >
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
@@ -29,18 +30,6 @@
                     name="campground[location]"
                     id="location"
                     value="<%= campground.location  %>"
-                    required
-                />
-                <div class="valid-feedback">Looks good!</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="image">Image URL</label>
-                <input
-                    class="form-control"
-                    type="text"
-                    name="campground[image]"
-                    id="image"
-                    value="<%= campground.image  %>"
                     required
                 />
                 <div class="valid-feedback">Looks good!</div>
@@ -75,6 +64,25 @@
 <%= campground.description  %>
                 </textarea>
                 <div class="valid-feedback">Looks good!</div>
+            </div>
+            <div class="mb-3">
+                <label for="images" class="form-label">Add More Images</label>
+                <input
+                    class="form-control"
+                    type="file"
+                    id="images"
+                    multiple
+                    name="image"
+                />
+            </div>
+            <div class="mb-3">
+                <% campground.images.forEach((img, i) => { %>
+                <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="" />
+                <div class="form-check-inline">
+                    <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%= img.filename %>">
+                </div>
+                <label for="image-<%=i%>">Delete?</label>
+                <% }) %>
             </div>
             <div class="mb-3">
                 <button class="btn btn-info">Update Campground</button>
