--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -58,8 +58,9 @@
                 <a
                     class="card-link btn btn-info"
                     href="/campgrounds/<%= campground._id %>/edit"
-                    >Edit</a
                 >
+                    Edit
+                </a>
                 <form
                     class="d-inline"
                     action="/campgrounds/<%= campground._id %>?_method=DELETE"
@@ -73,6 +74,7 @@
         </div>
     </div>
     <div class="col-6">
+        <div id="map" style="width: 100%; height: 300px;"></div>
         <% if (currentUser) {%>
         <h2>Leave a Review</h2>
         <form
@@ -168,3 +170,10 @@
         <% } %>
     </div>
 </div>
+
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    const campground = <%- JSON.stringify(campground) %>;
+</script>
+
+<script src="/javascripts/showPageMap.js"></script>
